# ignition-stack

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  builtin_modules.yaml  modules.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: .gitignore  cleanup.md  docusaurus.config.ts  gen_cli_reference.py  how-generation-works.md  ignition-seeding-matrix.md  lifecycle-modes.md  maintainer-updating-modules.md  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md
docs/docs/architecture/: how-generation-works.md
docs/docs/architectures/: basic.md  hub-and-spoke.md  index.md  scale-out.md
docs/docs/concepts/: configuration-record.md  how-generation-works.md  seeding.md
docs/docs/contribute/: add-a-service.md  ci.md  releasing.md
docs/docs/get-started/: installation.md  quickstart.md
docs/docs/guides/: declarative-config.md  disable-builtins.md  iiot-overlay.md  redundancy.md  reset-and-reshape.md  reverse-proxy.md  teardown.md  wizard.md
docs/docs/lifecycle/: cleanup.md
docs/docs/maintainers/: adding-a-service.md  updating-modules.md
docs/docs/profiles/: hub-and-spoke.md  index.md  mcp-n8n.md  scaleout.md  standalone.md
docs/docs/reference/: cli.md  seeding-matrix.md
docs/docs/services/: chariot.md  emqx.md  hivemq.md  index.md  kafka.md  keycloak.md  mariadb.md  modbus-sim.md  mongo.md  mysql.md  n8n.md  opcua-sim.md  postgres.md  rabbitmq.md
docs/profiles/: hub-and-spoke.md  mcp-n8n.md  scaleout.md  standalone.md
docs/services/: chariot.md  emqx.md  hivemq.md  kafka.md  keycloak.md  mariadb.md  modbus-sim.md  mongo.md  mysql.md  n8n.md  opcua-sim.md  postgres.md  rabbitmq.md
docs/src/css/: custom.css
ignition_stack/: cli.py  completion.py  wizard.py  wizard_composer.py
ignition_stack/architectures/: __init__.py  advisory.py  base.py  basic.py  carry.py  hub_and_spoke.py  scale_out.py
ignition_stack/catalog/: __init__.py  builtins.py  download.py  loader.py  modl.py  registry.py  resolver.py  schema.py  verify.py
ignition_stack/commands/: modules.py
ignition_stack/compose/: __init__.py  engine.py  writer.py
ignition_stack/compose/templates/: footer.yaml.j2  header.yaml.j2
ignition_stack/compose/templates/services/: bootstrap.yaml.j2  ignition.yaml.j2  postgres.yaml.j2
ignition_stack/config/: __init__.py  io.py  schema.py
ignition_stack/lifecycle/: record.py  regenerate.py
ignition_stack/postsetup/: generator.py
ignition_stack/profiles/: __init__.py  advisory.py  base.py  carry.py  hub_and_spoke.py  mcp_n8n.py  scaleout.py  standalone.py
ignition_stack/services/: __init__.py  loader.py  manifest.py  resolver.py
ignition_stack/templates/post-setup/: gateway-network-link.md.j2  identity-provider.md.j2  mqtt-engine-connection.md.j2  reverse-proxy.md.j2
ignition_stack/templates/services/chariot/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/emqx/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/hivemq/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/kafka/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/keycloak/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/mariadb/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/modbus-sim/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/mongo/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/mysql/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/n8n/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/opcua-sim/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/postgres/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/services/rabbitmq/: compose.yaml.j2  manifest.yaml
ignition_stack/templates/standalone-postgres/scripts/: docker-bootstrap.sh
scripts/seeding-poc/: README.md  capture_baseline.py
scripts/seeding-poc/baseline/: .env.example  bootstrap.sh  compose.yml
scripts/seeding-poc/experiments/module-install/: .env.example  compose.yml
tests/: conftest.py  test_architectures.py  test_builtin_catalog_smoke.py  test_completion.py  test_compose_engine.py  test_create_modules_integration.py  test_declarative_io.py  test_disable_builtins.py  test_docs_cli_reference.py  test_iiot_overlay.py  test_init_standalone.py  test_lifecycle.py  test_manifest_invariants.py  test_modl_parser.py  test_module_registry.py  test_module_resolver.py  test_modules_add_cli.py  test_modules_catalog.py  test_modules_cli.py  test_postsetup.py  test_profiles.py  test_redundancy.py  test_registry.py  test_service_catalog.py  test_service_catalog_smoke.py  test_switch_arch_registry.py  test_switch_profile_registry.py  test_wizard_back_nav.py  test_wizard_breadcrumb.py  test_wizard_composer.py
tests/golden/architectures/basic/: docker-compose.yaml
tests/golden/architectures/hub-and-spoke/: docker-compose.yaml
tests/golden/architectures/scale-out/: docker-compose.yaml
tests/golden/architectures/scale-out-redundant/: docker-compose.yaml
tests/golden/combos/hub-and-spoke-iiot-chariot/: docker-compose.yaml
tests/golden/combos/network-split/: docker-compose.yaml
tests/golden/combos/smoke-stack/: docker-compose.yaml
tests/golden/scaleout-skeleton/: docker-compose.yaml
verification/: keycloak-oidc-capture.md
verification/iiot-spike/: .gitignore  README.md
verification/phase-1-3/: .gitignore  README.md  run-test.sh
verification/redundancy-spike/: .gitignore  README.md  docker-compose.seed.yaml  docker-compose.yaml
verification/redundancy-spike/seed/: backup-redundancy.xml  master-redundancy.xml
verification/smoke/: README.md  run-test.sh
(+65 files in other folders)
