[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ignition-stack"
dynamic = ["version"]
description = "CLI that generates ready-to-run Docker Compose stacks for Ignition 8.3 SCADA demos and SE engagements"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eric Knorr", email = "etknorr@gmail.com" }]
keywords = ["ignition", "scada", "docker", "compose", "sales-engineering"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Installation/Setup",
]
dependencies = [
  # Phase 2: walking-skeleton CLI surface (typer/pydantic/rich).
  # Phase 3: catalog loader + modules subcommands (pyyaml/httpx).
  # Phase 4: compose generation engine (jinja2 fragments, ruamel for
  # anchor-preserving emit).
  # Phase 6: questionary (interactive wizard), psutil (RAM-based
  # hub-and-spoke advisory).
  "typer>=0.12",
  "pydantic>=2.7",
  "rich>=13.7",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "jinja2>=3.1",
  "ruamel.yaml>=0.18",
  "questionary>=2.0",
  "psutil>=5.9",
]

[project.optional-dependencies]
poc = [
  # Phase 1 only: tools for the seedability-investigation harness.
  "playwright>=1.49",
  "httpx>=0.27",
]
dev = [
  "pytest>=8.3",
  "ruff>=0.7",
]

[project.scripts]
ignition-stack = "ignition_stack.cli:app"

[tool.hatch.version]
path = "ignition_stack/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ignition_stack"]

[tool.hatch.build.targets.wheel.force-include]
"modules.yaml" = "ignition_stack/modules.yaml"

[tool.hatch.build.targets.sdist]
include = ["ignition_stack", "tests", "README.md", "pyproject.toml", "modules.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The multi-service compose smoke pulls images and boots a real gateway, so it
# is opt-in: run it with `pytest -m smoke` (CI Phase 9 + manual verification).
addopts = "-m 'not smoke'"
markers = [
  "smoke: end-to-end docker compose up smoke test (slow; requires Docker + Playwright)",
]
